--- a/src/sass/pages/_suivi.scss
+++ b/src/sass/pages/_suivi.scss
@@ -133,9 +133,11 @@ main{
                 width: 75%;
                 gap: 4px;
                 opacity: 0;
+                z-index: -1;
 
                 &.is-active{
                     animation: fade 0.5s forwards;
+                    z-index: 0;
                 }
     
                 .day{
@@ -146,7 +148,7 @@ main{
                     border-radius: 2px;
                     transition: all .2s ease-in;
                     cursor: pointer;
-    
+                    
                     &:hover{
                         background-color: #333;
                         color: #f1f1f1;
